Fully working file downloading; - properly encoding url with URI and URI.toURL();